# dct.crc.cms

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .grype.yaml  .pre-commit-config.yaml  .secrets.baseline  .trivyignore  CONTRIBUTING.md  Dockerfile  Dockerfile-FrontendTests  LICENSE  Pr-test.yml  README.md  SECURITY.md  Scenarios to be supported.txt  UnitTestDockerfile  aca-clean-pipeline.yml  aca-deploy-pipeline.yml  aks-deploy-pipelines.yml  azure-pipeline.yml  browsersync.config.js  clean-review-buids.yml  clean-review-builds.yml  database-migration-pipeline.yml  docker-compose-test-coverage.yml  docker-compose-test.yml  docker-compose.yml  docker-entrypoint.sh  execute-frontendtests.sh  fabfile.py  frontendtest-pipeline.yml  gitleaks-report.json  initializer-entrypoint.sh  manage.py  mkdocs.yml  owasp-suppression.xml  package-lock.json  (+12 more)
.devcontainer/: Dockerfile  devcontainer.json  devrequirements.txt  postCreateCommand.sh
.github/workflows/: azure-kubernetes-service-helm.yml  dependabot-auto-approve.yml  test-action.yml
FrontEndTests/: environment.py  run-acceptance-tests.sh  run-acceptance-tests_old.sh
FrontEndTests/feature/: CRC_Abuse.feature  CRC_HomePage.feature  CRC_Valid_Registration.feature
FrontEndTests/pages/: CRCV3_Abuse_Page.py  CRCV3_Main_Page.py
FrontEndTests/steps/: CRCV3_Abuse_Steps.py  CRCV3_Main_Steps.py
PerformanceTests/: azure-pipelines.yml  config.yml  crc-cruel-test.jmx  crc-j1-test.jmx  crc-j2-test.jmx  crc-naive-test.jmx  crc-v3-load-test.jmx  crc-warmup-1.jmx  jmeter.csv.example  locustfile.py  sample.jmx  user_emails.csv
PerformanceTests/jmxedit/: contexts.py  editTest.jmx  jmxedit.py  registerfake.py  requirements.txt  test1.jmx
PerformanceTests/terraform/: .gitignore
azure-pipeline-templates/: blob-sync.yml  build.yml  cleanup.yml  db-sync.yml  deploy-container-app-revision.yml  deploy.yml  frontendtest.yml  index-search.yaml  npm-install.yml  pip-install.yml  run-init-container-app-job.yml  test.yml
azure-pipeline-templates/templates/: blob-sync-steps.yml  db-sync-download-dump.yaml  db-sync-download-users-dump.yaml  db-sync-download.yaml  db-sync-env-sync.yaml  db-sync-generate-scripts.yaml  db-sync-restore-db.yaml  db-sync-restore-users.yaml  db-sync-upload-blob.yaml  db-sync-upload-dump.yaml  db-sync-upload-to-feed.yaml  db-sync-upload.yaml  db-users-download.yaml  index.yaml  redeploy.yaml
campaignresourcecentre/: apps.py  tests.py  urls.py  weekx.html  wsgi.py
campaignresourcecentre/azurestore/: apps.py  signal_handlers.py  utils.py
campaignresourcecentre/baskets/: basket.py  exceptions.py  tests.py  views.py
campaignresourcecentre/baskets/templates/: view_basket.html
campaignresourcecentre/campaigns/: admin.py  blocks.py  models.py  tests.py  views.py  wagtail_hooks.py
campaignresourcecentre/core/: apps.py  assetdata.py  helpers.py  preparetestdata.py  tests.py  wagtail_hooks.py
campaignresourcecentre/core/tag_management/: forms.py  (+4 more)
campaignresourcecentre/custom_storages/: custom_azure.py  custom_azure_file.py  custom_azure_storage.py  custom_azure_uploader.py  tests.py  upload_flow.drawio
campaignresourcecentre/documents/: models.py  tests.py  wagtail_hooks.py
campaignresourcecentre/forms/: models.py
campaignresourcecentre/guides/: models.py
campaignresourcecentre/home/: models.py
campaignresourcecentre/navigation/: models.py
campaignresourcecentre/notifications/: __init__.py  adapters.py  dataclasses.py
campaignresourcecentre/orders/: admin.py  apps.py  forms.py  models.py  signal_handlers.py  views.py
campaignresourcecentre/page_lifecycle/: edit_handlers.py  factories.py  forms.py  models.py  utils.py
campaignresourcecentre/paragon/: apps.py  client.py  data_classes.py  exceptions.py  models.py  tests.py
campaignresourcecentre/paragon_users/: admin_urls.py  admin_views.py  decorators.py  forms.py  models.py  tests.py  views.py  wagtail_hooks.py
campaignresourcecentre/reports/: tests.py  views.py  wagtail_hooks.py
campaignresourcecentre/resources/: admin.py  models.py  tests.py  views.py
campaignresourcecentre/scheduled_tasks/: tests.py  views.py
campaignresourcecentre/scheduler/: runapscheduler.py
campaignresourcecentre/search/: azure.py  test.py  test_data.py  test_sample_azure_response.json  tests.py  views.py
campaignresourcecentre/settings/: base.py  dev.py  local.py.example  production.py  test.py
campaignresourcecentre/standardpages/: factories.py  forms.py  models.py  views.py
campaignresourcecentre/users/: __init__.py  admin_forms.py  admin_views.py  apps.py
campaignresourcecentre/utils/: blocks.py  context_processors.py  factories.py  feature_flags.py  models.py  views.py
campaignresourcecentre/wagtailreacttaxonomy/: models.py  panels.py  tests.py  wagtail_hooks.py
docker/: Dockerfile.frontend  bashrc.sh  coverage.sh
docs/: continuous-integration.md  db-sync.md  index.md
docs/front-end/: tooling.md
git-secrets/: README-gitleaks.md  git-leaks-wrapper-mac.sh  git-leaks-wrapper.bat  git-leaks-wrapper.py  nhsd-gitleaks-config.toml
helm/: values.yaml
helm1/: Chart.yaml  README.md  values.yaml
helm1/charts/: appchart-0.0.1.tgz
helm1/templates/: _app_env.tpl  _partial-labels.tpl  _resource_limits.tpl  celery-deployment.yaml  clockwork-deployment.yaml  delayed-job-deployment.yaml  egress-to-haproxy-netpol.yaml  egress_to_external_netpol.yaml  hpa.yaml  ingress-controller.yaml  ingress-egress-deny-all-netpol.yaml  ingress-from-external-netpol.yaml  ingress-from-haproxy-netpol.yaml  redis-deployment.yaml  services.yaml  sidekiq-deployment.yaml  web-deployment.yaml  web-initializer.yaml
poetry/: pyproject.toml
postgres/: .gitignore  migration-pipeline-steps.yml  migration-properties.jq  run-migration.sh  run-validation.sh  validation.sql
pre-commit/git-secrets/: git-leaks-wrapper-mac.sh  git-leaks-wrapper.bat  nhsd-gitleaks-config.toml
scripts/: get-resources-to-delete.sh
terraform/: .gitignore  azure-pipelines.yml
terraform/templates/: deployment-steps.yml  release-variables.yml  variables.yml
(+478 files in other folders)
