[tool.poetry]
name = "campaignresourcecentre"
version = "0.1.0"
description = ""
authors = ["Torchbox <hello@torchbox.com>"]

[tool.poetry.dependencies]
python = "~3.10"
django = "~4.0"
wagtail = "~2.16"
psycopg2 = "~2.8"
gunicorn = "~20.1.0"
wagtail-django-recaptcha = "1.0"
whitenoise = "~5.0"
dj-database-url = "~0.5"
sentry-sdk = "~1.0"
django-storages = { version ="~1.12", extras = ["azure"] }
django-referrer-policy = "~1.0"
django-csp = "~3.7"
django-extensions = "~3.1"
django-pattern-library = "~0.7"
wagtail-accessibility = "~0.2"
coverage = "^5.4"
wagtail-factories = "^2.0.1"
freezegun = "^1.1.0"
django-gov-notify = {git = "https://github.com/angloc/django-gov-notify", rev = "4f10e8ed7537eb6ba094c8fe8c6dc0ac9ef7344d"}
wagtail-reacttaxonomy = {git = "https://github.com/angloc/wagtail-reacttaxonomy", rev = "a7d133f6d7aefc5d0e5dd9f31d51cb323f5cf47b"}
azure-storage-blob = "^12.0"
azure-storage-file = "^2.1"
azure-storage-common = "^2.1"
azure-core = "^1.23"
wagtail-nhsuk-frontend = "^0.8.0"
requests = "^2.25.1"
instana = "1.37.4"
django-cprofile-middleware = "1.0.5"
django-treebeard = "4.5.1"
django-debug-toolbar = "~3.2"
redis = "~4.1"
wagtail-2fa = {git = "https://github.com/Ross-Clark/wagtail-2fa.git", rev = "fa90d9d851ea6a8214e2dd04fdfba073b4dd0305"}
urllib3 = "1.26.5"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
Werkzeug = "~0.16"
fabric = "~2.5"
stellar = "~0.4"
responses = "^0.13.3"

# Linters etc.
black = "22.8.0"
detect-secrets = "~0.14"
flake8 = "3.8.3"
isort = "5.7.0"
pre-commit = "~2.11"
ptvsd = "^4.3.2"

# Documentation
mkdocs = "~1.1"
mkdocs-material = "~6.2"
pymdown-extensions = "~8.1"

[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 88
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
    | docs
    | venv
    | node_modules
    | .+/migrations
  )/
)
'''
