[tool.poetry]
name = "campaignresourcecentre"
version = "0.1.0"
description = ""
authors = ["Torchbox <hello@torchbox.com>"]

[tool.poetry.dependencies]
python = "~3.12"
django = "~5.0"
wagtail = "~6.2"
psycopg2 = "2.9.5"
gunicorn = {version = "22.0", optional = true}
wagtail-django-recaptcha = "2.1.1"
whitenoise = "~5.0"
dj-database-url = "~0.5"
sentry-sdk = "1.14.0"
django-storages = { version ="~1.12", extras = ["azure"] }
django-referrer-policy = "~1.0"
django-csp = "~3.7"
django-extensions = "~3.1"
django-pattern-library = "^1.2.0"
wagtail-accessibility = "~0.2"
coverage = "^5.4"
wagtail-factories = "^2.0.1"
freezegun = "^1.1.0"
wagtail-reacttaxonomy = {git = "https://github.com/dylan8902/wagtail-reacttaxonomy", branch = "wagtail6"}
django-gov-notify = "^0.6.0"
azure-storage-blob = "^12.0"
azure-storage-file = "^2.1"
azure-storage-common = "^2.1"
azure-core = "^1.23"
wagtail-nhsuk-frontend = "^1.4.0"
requests = "^2.28.1 "
instana = "1.38.0 "
django-cprofile-middleware = "1.0.5"
django-debug-toolbar = "~3.2"
redis = "~4.1"
wagtail-2fa = "^1.6.9"
azure-search-documents = "^11.3.0"
azure-search = "^1.0.0b2"
wagtail-modeladmin = "^2.0.0"

[tool.poetry.extras]
gunicorn = ["gunicorn"]

[tool.poetry.dev-dependencies]
unittest-xml-reporting = "^3.2.0"
Werkzeug = "~0.16"
fabric = "~2.5"
stellar = "~0.4"
responses = "^0.13.3"

# Linters etc.
black = "22.8.0"
detect-secrets = "~0.14"
flake8 = "3.8.3"
isort = "5.7.0"
pre-commit = "~2.11"
ptvsd = "^4.3.2"

# Documentation
pymdown-extensions = "~8.1"

[build-system]
requires = ["poetry>=1,<2"]
build-backend = "poetry.masonry.api"

[tool.black]
line_length = 88
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
    | docs
    | venv
    | node_modules
    | .+/migrations
 )/
)
'''
